@@ -218,6 +218,11 @@ t/Wikibase-Datatype-Lexeme/05-language.t
 t/Wikibase-Datatype-Lexeme/06-lastrevid.t
 t/Wikibase-Datatype-Lexeme/07-lemmas.t
 t/Wikibase-Datatype-Lexeme/08-lexical_category.t
+t/Wikibase-Datatype-Lexeme/09-modified.t
+t/Wikibase-Datatype-Lexeme/10-ns.t
+t/Wikibase-Datatype-Lexeme/11-senses.t
+t/Wikibase-Datatype-Lexeme/12-statements.t
+t/Wikibase-Datatype-Lexeme/13-title.t
 t/Wikibase-Datatype-Mediainfo/01-use.t
 t/Wikibase-Datatype-Mediainfo/02-version.t
 t/Wikibase-Datatype-Mediainfo/03-new.t
