@@ -1,0 +1,17 @@
+use strict;
+use warnings;
+
+use Test::More 'tests' => 3;
+use Test::NoWarnings;
+use Test::Shared::Fixture::Wikibase::Datatype::Lexeme::Wikidata::DogCzechNoun;
+use Wikibase::Datatype::Lexeme;
+
+# Test.
+my $obj = Wikibase::Datatype::Lexeme->new;
+my $ret = $obj->modified;
+is($ret, undef, 'Get default modified (undef).');
+
+# Test.
+$obj = Test::Shared::Fixture::Wikibase::Datatype::Lexeme::Wikidata::DogCzechNoun->new;
+$ret = $obj->modified;
+is($ret, '2022-06-24T12:42:10Z', 'Get modified (2022-06-24T12:42:10Z).');
